[package]
name = "lumeo-commands"
version = "0.1.0"
authors = ["Zeeshan Ali <zeeshan@lumeo.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lumeo-events = { path = "../events" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
url = { version = "2.1.1", features = ["serde"] }
uuid = { version = "0.8", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde"] }
