[package]
name = "lumeo-commands"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
num-rational = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.0", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde"] }
