[package]
name = "lumeo-events"
version = "0.1.0"
authors = ["Zeeshan Ali <zeeshan@lumeo.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.1.1", features = ["serde"] }
uuid = { version = "0.8", features = ["serde"] }
zvariant = { version = "2.4.0", default-features = false }

[dev-dependencies]
serde_json = "1.0"
