[package]
name = "lumeo-events"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.1.1", features = ["serde"] }
uuid = { version = "0.8", features = ["serde"] }
zvariant = { version = "2.8.0", default-features = false }
