[package]
name = "lumeo-pipeline"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.0"
url = { version = "2.1", features = ["serde"] }
uuid = { version = "0.8", features = ["serde"] }
serde_json = "1.0.51"
